# Atilkurt

./: .dockerignore  .env.example  .gitignore  AtilKurt.py  Dockerfile  Makefile  README.md  README_TR.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
analysis/: __init__.py  acl_security_analyzer.py  ad_cs_extended_analyzer.py  attack_path_analyzer.py  audit_policy_analyzer.py  backup_operator_analyzer.py  baseline_comparator.py  certificate_analyzer.py  coerce_attack_analyzer.py  compliance_analyzer.py  computer_risks.py  dcsync_analyzer.py  domain_security_analyzer.py  exploitability_scorer.py  extended_ldap_analyzer.py  gmsa_analyzer.py  golden_gmsa_analyzer.py  gpo_abuse_analyzer.py  gpp_password_extractor.py  group_risks.py  honeypot_detector.py  kerberoasting_detector.py  kerberos_delegation.py  krbtgt_health_analyzer.py  laps_analyzer.py  lateral_movement_analyzer.py  legacy_os_analyzer.py  machine_quota_analyzer.py  misconfiguration_checklist.py  password_policy_analyzer.py  password_spray_risk_analyzer.py  privilege_calculator.py  privilege_escalation.py  registry.py  replication_metadata_analyzer.py  service_account_analyzer.py  stale_objects_analyzer.py  tier_analyzer.py  trust_analyzer.py  user_risks.py  (+1 more)
core/: base_analyzer.py  cache.py  config.py  constants.py  exceptions.py  factory.py  ldap_connection.py  parallel_ldap.py  progress_persistence.py  progress_tracker.py  secure_password.py  security_descriptor_parser.py  stealth_mode.py  types.py  validators.py
reporting/: ciso_dashboard.py  compliance_reporter.py  (+3 more)
(+29 files in other folders)
