[project]
name = "atilkurt"
version = "1.0"
description = "Active Directory Security Health Check Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ldap3>=2.9.1,<3.0.0",
    "pycryptodome>=3.19.0,<4.0.0",
]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "B", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False for tests

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
